fixing hostname in iperf dashboard
